Fix util.jar processor